2006-11-11  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/java/beans/beancontext/BeanContextSupport/getChildBeanContextChild.java: New file,
	* gnu/testlet/java/beans/beancontext/BeanContextSupport/MyBeanContextSupport.java: New file.

2006-11-10  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/java/util/Collections/sort.java: New file.

2006-11-10  Gary Benson  <gbenson@redhat.com>

	* gnu/testlet/java/net/Socket/security.java:
	Removed more unused imports.

2006-11-10  Gary Benson  <gbenson@redhat.com>

	* gnu/testlet/java/net/ServerSocket/security.java:
	Always use localhost regardless of the actual hostname
	of the address being listened on.

	* gnu/testlet/java/net/Socket/security.java:
	Removed an unused import.

2006-11-09  Tania Bento  <tbento@redhat.com>

	* gnu/testlet/javax/swing/JLabel/constructor.java: Added new tests.

2006-11-09  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/java/beans/beancontext/BeanContextSupport/constructors.java: New test,
	* gnu/testlet/java/beans/beancontext/BeanContextSupport/getBeanContextPeer.java: New test.

2006-11-09  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/java/beans/SimpleBeanInfo/getAdditionalBeanInfo.java: 
	New file,
	* gnu/testlet/java/beans/SimpleBeanInfo/getBeanDescriptor.java: 
	New file,
	* gnu/testlet/java/beans/SimpleBeanInfo/getDefaultEventIndex.java: 
	New file,
	* gnu/testlet/java/beans/SimpleBeanInfo/getDefaultPropertyIndex.java: 
	New file,
	* gnu/testlet/java/beans/SimpleBeanInfo/getEventSetDescriptors.java: 
	New file,
	* gnu/testlet/java/beans/SimpleBeanInfo/getIcon.java: New file,
	* gnu/testlet/java/beans/SimpleBeanInfo/loadImage.java: New file,
	* gnu/testlet/java/beans/SimpleBeanInfo/MySimpleBeanInfo.java: New file,
	* gnu/testlet/java/beans/SimpleBeanInfo/testImage1.gif: New file.

2006-11-07  Tania Bento  <tbento@redhat.com>

	* gnu/testlet/java/awt/FlowLayout/minimumLayoutSize.java: New test.
